fix(DataGrid): virtual scrollbar not visible v11 (#2467)
* fix(DataGrid): virtual scrollbar not visible v11

* fix(DataGrid): review fix

--- a/packages/cloud-cognitive/src/components/Datagrid/styles/_datagrid.scss
+++ b/packages/cloud-cognitive/src/components/Datagrid/styles/_datagrid.scss
@@ -542,6 +542,23 @@
   justify-content: center;
 }
 
+.#{$block-class}__virtual-scrollbar::-webkit-scrollbar {
+  width: 10px;
+  height: 7px;
+}
+
+.#{$block-class}__virtual-scrollbar::-webkit-scrollbar-track {
+  background: $layer;
+}
+
+.#{$block-class}__virtual-scrollbar::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+}
+
+.#{$block-class}__virtualScrollContainer {
+  width: 100%;
+}
+
 .#{c4p-settings.$carbon-prefix}--body--with-modal-open
   .#{$block-class}__grid-container {
   overflow: hidden;
